[package]
name = "hnt"
version = "0.1.0"
edition = "2024"

[dependencies]
firebase-rs = "2.2.1"
futures = "0.3.31"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
ratatui = "0.29.0"
color-eyre = "0.6.5"
textwrap = "0.16.2"
time = "0.3.41"
