[package]
name = "hnt"
version = "0.1.0"
edition = "2024"
description = "A hacker news reader in terminal"
license = "GPL3.0"
homepage = "https://github.com/BrokenC1oud/hnt"
repository = "https://github.com/BrokenC1oud/hnt.git"
readme = "README.MD"
keywords = ["Terminal", "Hacker News"]
categories = ["web-programming::http-client", "gui"]

[dependencies]
firebase-rs = "2.2.1"
futures = "0.3.31"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
ratatui = "0.29.0"
color-eyre = "0.6.5"
textwrap = "0.16.2"
time = "0.3.41"
